--- a/.travis.yml
+++ b/.travis.yml
@@ -1,122 +1,63 @@
-# errata:
-# - A travis bug causes caches to trample eachother when using the same
-#   compiler key (which we don't use anyway). This is worked around for now by
-#   replacing the "compilers" with a build name prefixed by the no-op ":"
-#   command. See: https://github.com/travis-ci/casher/issues/6
-
-sudo: false
-dist: precise
-
+sudo: required
+dist: trusty
 os: linux
-language: cpp
-compiler: gcc
+language: generic
+cache:
+  directories:
+  - depends/built
+  - depends/sdk-sources
+  - "$HOME/.ccache"
 env:
   global:
     - MAKEJOBS=-j3
-    - RUN_TESTS=false
     - CCACHE_SIZE=100M
     - CCACHE_TEMPDIR=/tmp/.ccache-temp
     - CCACHE_COMPRESS=1
     - BASE_OUTDIR=$TRAVIS_BUILD_DIR/out
-    - SDK_URL=https://dash.org/depends-sources/sdks
-cache:
-  apt: true
-  ccache: true
-  directories:
-    - depends/built
-    - depends/sdk-sources
-matrix:
-  fast_finish: true
-  include:
-    - compiler: ": ARM"
-      env: HOST=arm-linux-gnueabihf DEP_OPTS="NO_QT=1" GOAL="install" BITCOIN_CONFIG="--enable-glibc-back-compat"
-      addons:
-        apt:
-          packages:
-          - g++-arm-linux-gnueabihf
-    - compiler: ": dashd"
-      env: HOST=x86_64-unknown-linux-gnu DEP_OPTS="NO_QT=1 NO_UPNP=1 DEBUG=1" RUN_TESTS=false GOAL="install" BITCOIN_CONFIG="--enable-glibc-back-compat CPPFLAGS=-DDEBUG_LOCKORDER"
-      addons:
-        apt:
-          packages:
-          - bc
-    - compiler: ": 32-bit + dash"
-      env: HOST=i686-pc-linux-gnu RUN_TESTS=true GOAL="install" BITCOIN_CONFIG="--enable-glibc-back-compat" USE_SHELL="/bin/dash"
-      addons:
-        apt:
-          packages:
-          - g++-multilib
-          - bc
-    - compiler: ": Cross-Mac"
-      env: HOST=x86_64-apple-darwin11 OSX_SDK=10.7 GOAL="deploy"
-      addons:
-        apt:
-          packages:
-          - gcc-multilib
-          - g++-multilib
-          - cmake
-          - libcap-dev
-          - libbz2-dev
-    - compiler: ": Win64"
-      env: HOST=x86_64-w64-mingw32 RUN_TESTS=false GOAL="deploy" BITCOIN_CONFIG="--enable-gui" MAKEJOBS="-j2" WINE=true
-      addons:
-        apt:
-          sources:
-          - sourceline: 'ppa:ubuntu-wine/ppa'
-          packages:
-          - nsis
-          - gcc-mingw-w64-x86-64
-          - g++-mingw-w64-x86-64
-          - binutils-mingw-w64-x86-64
-          - mingw-w64-dev
-          - wine1.7
-          - bc
-    - compiler: ": Win32"
-      env: HOST=i686-w64-mingw32 RUN_TESTS=false GOAL="deploy" BITCOIN_CONFIG="--enable-gui" MAKEJOBS="-j2" WINE=true
-      addons:
-        apt:
-          sources:
-          - sourceline: 'ppa:ubuntu-wine/ppa'
-          packages:
-          - nsis
-          - gcc-mingw-w64-i686
-          - g++-mingw-w64-i686
-          - binutils-mingw-w64-i686
-          - mingw-w64-dev
-          - wine1.7
-          - bc
-  exclude:
-    - compiler: gcc
+    - SDK_URL=https://bitcoincore.org/depends-sources/sdks
+  matrix:
+    - HOST=arm-linux-gnueabihf PACKAGES="g++-arm-linux-gnueabihf" DEP_OPTS="" GOAL="install" BITCOIN_CONFIG="--enable-glibc-back-compat --enable-gui"
+    - HOST=x86_64-unknown-linux-gnu DEP_OPTS="" GOAL="install" BITCOIN_CONFIG="--enable-glibc-back-compat --enable-gui "
+    - HOST=x86_64-apple-darwin11 PACKAGES="gcc-multilib g++-multilib cmake libcap-dev libz-dev libbz2-dev" OSX_SDK=10.11 GOAL="deploy"
+    - HOST=x86_64-w64-mingw32 DPKG_ADD_ARCH="i386" PACKAGES="python3 nsis g++-mingw-w64-x86-64 wine1.6 bc" GOAL="deploy" BITCOIN_CONFIG="--enable-gui" MAKEJOBS="-j2"
+    - HOST=i686-w64-mingw32 DPKG_ADD_ARCH="i386" PACKAGES="python3 nsis g++-mingw-w64-i686 wine1.6 bc" GOAL="deploy" BITCOIN_CONFIG="--enable-gui" MAKEJOBS="-j2"
 install:
+    - if [ -n "$PPA" ]; then travis_retry sudo add-apt-repository "$PPA" -y; fi
+    - if [ -n "$DPKG_ADD_ARCH" ]; then sudo dpkg --add-architecture "$DPKG_ADD_ARCH" ; fi
+    - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get update; fi
+    - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get install --no-install-recommends --no-upgrade -qq $PACKAGES; fi
 before_script:
     - unset CC; unset CXX
     - mkdir -p depends/SDKs depends/sdk-sources
-    - if [ -n "$OSX_SDK" -a ! -f depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz ]; then curl --location --fail $SDK_URL/MacOSX${OSX_SDK}.sdk.tar.gz -o depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz; fi
+    - if [ -n "$OSX_SDK" -a ! -f depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz ]; then wget $SDK_URL/MacOSX${OSX_SDK}.sdk.tar.gz -O depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz; fi
     - if [ -n "$OSX_SDK" -a -f depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz ]; then tar -C depends/SDKs -xf depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz; fi
     - make $MAKEJOBS -C depends HOST=$HOST $DEP_OPTS
 script:
+    - export TRAVIS_COMMIT_LOG=`git log --format=fuller -1`
     - if [ -n "$USE_SHELL" ]; then export CONFIG_SHELL="$USE_SHELL"; fi
     - OUTDIR=$BASE_OUTDIR/$TRAVIS_PULL_REQUEST/$TRAVIS_JOB_NUMBER-$HOST
     - BITCOIN_CONFIG_ALL="--disable-dependency-tracking --prefix=$TRAVIS_BUILD_DIR/depends/$HOST --bindir=$OUTDIR/bin --libdir=$OUTDIR/lib"
     - depends/$HOST/native/bin/ccache --max-size=$CCACHE_SIZE
-    - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then export CCACHE_READONLY=1; fi
     - test -n "$USE_SHELL" && eval '"$USE_SHELL" -c "./autogen.sh"' || ./autogen.sh
     - ./configure --cache-file=config.cache $BITCOIN_CONFIG_ALL $BITCOIN_CONFIG || ( cat config.log && false)
-    - make distdir PACKAGE=dash VERSION=$HOST
-    - cd dash-$HOST
+    - make distdir PACKAGE=bitcoin VERSION=$HOST
+    - cd bitcoin-$HOST
     - ./configure --cache-file=../config.cache $BITCOIN_CONFIG_ALL $BITCOIN_CONFIG || ( cat config.log && false)
     - make $MAKEJOBS $GOAL || ( echo "Build failure. Verbose build follows." && make $GOAL V=1 ; false )
+    - mkdir $HOME/bin
     - export LD_LIBRARY_PATH=$TRAVIS_BUILD_DIR/depends/$HOST/lib
     - ls -la 
     - if [ -d $OUTDIR ]; then ls -la $OUTDIR && cp $OUTDIR/* $HOME/bin/ -rf; fi
     - if [ -n "$OSX_SDK" ]; then cp -rf Fortcoin-Qt.app $HOME/bin; fi
-    - if [ -f "Fortcoin-1.12.0-win64-setup.exe" ]; then cp Fortcoin-1.12.0-win64-setup.exe $HOME/bin; fi
-    - if [ -f "Fortcoin-1.12.0-win32-setup.exe" ]; then cp Fortcoin-1.12.0-win32-setup.exe $HOME/bin; fi
+    - if [ -f "Fortcoin-1.12.0-win64-setup.exe" ]; then cp Fortcoin-1.0.0-win64-setup.exe $HOME/bin; fi
+    - if [ -f "Fortcoin-1.12.0-win32-setup.exe" ]; then cp Fortcoin-1.0.0-win32-setup.exe $HOME/bin; fi
     - ls -la $HOME/bin
     - ls -la $HOME/bin/*
 after_script:
-    - echo $TRAVIS_COMMIT_RANGE
-    - echo $TRAVIS_COMMIT_LOG
+- echo $TRAVIS_COMMIT_RANGE
+- echo $TRAVIS_COMMIT_LOG
+notifications:
+  irc: chat.freenode.net#multicoin-co
 before_deploy: cd $HOME && tar -zcvf Fortcoin-$HOST.tar.gz $HOME/bin && ls -la $HOME
 deploy:
   skip_cleanup: true
