--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ script:
     - make $MAKEJOBS $GOAL || ( echo "Build failure. Verbose build follows." && make $GOAL V=1 ; false )
     - mkdir $HOME/bin
     - export LD_LIBRARY_PATH=$TRAVIS_BUILD_DIR/depends/$HOST/lib
-    - ls -la 
+    - ls -la  && pwd
     - if [ -d $OUTDIR ]; then ls -la $OUTDIR && cp $OUTDIR/* $HOME/bin/ -rf; fi
     - if [ -n "$OSX_SDK" ]; then cp -rf Fortcoin-Qt.app $HOME/bin; fi
     - if [ -f "Fortcoin-1.12.2-win64-setup.exe" ]; then cp Fortcoin-1.12.2-win64-setup.exe $HOME/bin; fi
